[package]
name = "youtube-map-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"
actix-web = "4.0.0-beta.x"
actix-rt = "2.6.0"
bson = "2.1.0"
serde = "1.0.136"
futures = "0.3.21"
env_logger = "0.9.0"
dotenv = "0.15.0"
actix-cors = "0.5.4"
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }