[package]
name = "youtube-map-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"
actix-web = "4.0.0-beta.x"
actix-rt = "2.6.0"
bson = {version = "2.1.0", features = ["chrono-0_4"]}
serde = "1.0.136"
futures = "0.3.21"
env_logger = "0.9.0"
dotenv = "0.15.0"
actix-cors = "0.6.0-beta.10"
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.2.2"
async-recursion = "1.0.0"
rand = "0.8.5"
chrono = "0.4.19"
actix = "0.13.0"